# deposition-molecular-dynamics

./: .gitignore  paper.md  pyproject.toml  run_deposition.py
deposition/: __init__.py  deposition.py  distributions.py  enums.py  input_schema.py  io.py  iteration.py  physics.py  postprocessing.py  randomisation.py  settings.py  state.py  status.py  types.py  utils.py
deposition/drivers/: __init__.py  driver_enums.py  gulp_driver.py  lammps_driver.py  molecular_dynamics_driver.py  template_driver.py
deposition/tests/: __init__.py  test_boilerplate.py  test_drivers.py  test_reading_input_file.py
deposition/tests/test_data/: potential.reaxff  valid_settings.yaml
docs/: conf.py
docs/contributing/: new_drivers.rst
examples/GULP/settings/: settings.yaml
examples/LAMMPS/settings/: lammps_input_template.txt  settings.yaml
